Refactor: SecurityConfig; strict CORS, CSRF disabled